--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,8 @@
 
   <!-- Allow installing the app to the homescreen -->
   <meta name="mobile-web-app-capable" content="yes">
-
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
   <link rel="icon" href="/favicon.ico" />
   <title>Redefine</title>
 </head>
